--- a/index.HTML
+++ b/index.HTML
@@ -13,8 +13,8 @@
         <div>
             <p>VRConnect</p>
         </div>
-        <a href="index.HTML">Home</a>
-        <a href="about.HTML">About</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
         <a href="#">Mentor</a>
         <button class="signIn">Sign In</button>
         <button class="signUp">Sign Up</button>
