added .less files

--- a/index.HTML
+++ b/index.HTML
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-
+<section class="container">
     <nav>
         <div>
             <p>VRConnect</p>
@@ -22,7 +22,7 @@
 
 <header>
     <div class="leftMiddle">
-    <img src="img/globe" class="globeImg">
+    <img src="img/globe.jpg" class="globeImg">
     <div>
         <h1>Plan,</br>
              Produce,</br> 
@@ -41,7 +41,7 @@
     <img src="IMG/apple.png">
     <img src="img/google.png">
 </section>
-
+</section>
 
 </body>
 </html>
