finished mobile first design of index.html

--- a/index.HTML
+++ b/index.HTML
@@ -5,41 +5,53 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link href="css/index.css" rel="stylesheet" />
+    <title>VR Connect, Funding Platform</title>
 </head>
 <body>
 <section class="container">
     <nav>
-        <div>
-            <p>VRConnect</p>
+        <div class="navHeader">
+            <h1>VRConnect</h1>
         </div>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="#">Mentor</a>
+        <div class="buttons">
         <button class="signIn">Sign In</button>
         <button class="signUp">Sign Up</button>
+        </div>
     </nav>
 
-<header>
-    <div class="leftMiddle">
+<header class="middle">
+   <div>
     <img src="img/globe.jpg" class="globeImg">
-    <div>
-        <h1>Plan,</br>
+   </div>
+    <div class="leftText">
+     
+        <h2>Plan,</br>
              Produce,</br> 
-             Paid.</h1>
+             Paid.</h2>
         </div>
 
-<div class="rightMiddle">
-        <div>
+        
+        <div class="rightText">
             <p>A platform to share your VR ideas and projects, and a way to get help giving them flight</p>
         </div>
+
+        <div>
         <img src="IMG/googles.jpg" class="gogglesImg">
-    </div>
+        </div>
+   
 </header>
 
 <section class="appLogos">
+    <div class="apple">
     <img src="IMG/apple.png">
+    </div>
+    <div class="google">
     <img src="img/google.png">
+    </div>
 </section>
 </section>
 
