desktop nav done

--- a/index.HTML
+++ b/index.HTML
@@ -2,27 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Roboto" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet" />
     <title>VR Connect, Funding Platform</title>
 </head>
 <body>
-<section class="container">
+
     <nav>
         <div class="navHeader">
             <h1>VRConnect</h1>
         </div>
+
+        <div class="links">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="#">Mentor</a>
+        </div>
+
         <div class="buttons">
         <button class="signIn">Sign In</button>
         <button class="signUp">Sign Up</button>
         </div>
     </nav>
-
+<section class="container">
 <header class="middle">
    <div>
     <img src="img/globe.jpg" class="globeImg">
