finished about desktop veiw

--- a/about.HTML
+++ b/about.HTML
@@ -59,7 +59,7 @@
           </p>
         </div>
 
-        <div class="UI">
+        <div class="ui">
           <img src="img/Michael.png" />
           <h2>Michael Levick</h2>
           <h3>User Interface</h3>
@@ -70,7 +70,7 @@
           </p>
         </div>
 
-        <div class="frontend1">
+        <div class="frontEnd1">
           <img src="img/Chris.jpg" />
           <h2>Chris Boydstun</h2>
           <h3>Front End</h3>
@@ -81,7 +81,7 @@
           </p>
         </div>
 
-        <div class="frontend2">
+        <div class="frontEnd2">
           <img src="img/Mike.jpg" />
           <h2>Mike Harley</h2>
           <h3>Front End</h3>
@@ -92,7 +92,7 @@
           </p>
         </div>
 
-        <div class="backend">
+        <div class="backEnd">
           <img src="img/Marcus.jpg" />
           <h2>Marcus Jones</h2>
           <h3>Back End</h3>
